--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,11 @@
   <packaging>jar</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <spigot.version>1.16.4-R0.1-SNAPSHOT</spigot.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <spigot.version>1.19.3-R0.1-SNAPSHOT</spigot.version>
   </properties>
   <repositories>
-    <repository>
-      <id>dmulloy2-repo</id>
-      <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
-    </repository>
     <repository>
       <id>spigot-repo</id>
       <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
@@ -32,6 +28,7 @@
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot</artifactId>
       <version>${spigot.version}</version>
+      <classifier>remapped-mojang</classifier>
       <scope>provided</scope>
     </dependency>
   </dependencies>
@@ -45,5 +42,40 @@
         </includes>
       </resource>
     </resources>
+    <plugins>
+      <plugin>
+        <groupId>net.md-5</groupId>
+        <artifactId>specialsource-maven-plugin</artifactId>
+        <version>1.2.2</version>
+        <executions>
+            <execution>
+                <phase>package</phase>
+                <goals>
+                    <goal>remap</goal>
+                </goals>
+                <id>remap-obf</id>
+                <configuration>
+                    <srgIn>org.spigotmc:minecraft-server:${spigot.version}:txt:maps-mojang</srgIn>
+                    <reverse>true</reverse>
+                    <remappedDependencies>org.spigotmc:spigot:${spigot.version}:jar:remapped-mojang</remappedDependencies>
+                    <remappedArtifactAttached>true</remappedArtifactAttached>
+                    <remappedClassifierName>remapped-obf</remappedClassifierName>
+                </configuration>
+            </execution>
+            <execution>
+                <phase>package</phase>
+                <goals>
+                    <goal>remap</goal>
+                </goals>
+                <id>remap-spigot</id>
+                <configuration>
+                    <inputFile>${project.build.directory}/${project.artifactId}-${project.version}-remapped-obf.jar</inputFile>
+                    <srgIn>org.spigotmc:minecraft-server:${spigot.version}:csrg:maps-spigot</srgIn>
+                    <remappedDependencies>org.spigotmc:spigot:${spigot.version}:jar:remapped-obf</remappedDependencies>
+                </configuration>
+            </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 </project>
